--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
         <div class="app-selector">
             <button class="app-btn active" onclick="selectApp('ehliyet')">Ehliyet Mobil</button>
-            <button class="app-btn" onclick="selectApp('habit')">Habit Tracker</button>
+            <button class="app-btn" onclick="selectApp('habit')">Habit Chain</button>
         </div>
 
         <!-- Ehliyet Mobil - English -->
@@ -302,10 +302,10 @@
             </div>
         </div>
 
-        <!-- Habit Tracker - English -->
+        <!-- Habit Chain - English -->
         <div id="habit-en" class="content-section">
             <h2>Introduction</h2>
-            <p>This Privacy Policy explains how our habit tracker app protects the privacy of its users. We take our users' privacy very seriously.</p>
+            <p>This Privacy Policy explains how our Habit Chain app protects the privacy of its users. We take our users' privacy very seriously.</p>
 
             <h2>Information Collected</h2>
             <ul>
@@ -349,10 +349,10 @@
             </div>
         </div>
 
-        <!-- Habit Tracker - Turkish -->
+        <!-- Habit Chain - Turkish -->
         <div id="habit-tr" class="content-section">
             <h2>Giriş</h2>
-            <p>Bu Gizlilik Politikası, habit tracker uygulamamızın kullanıcılarının gizliliğini nasıl koruduğunu açıklamaktadır. Biz, kullanıcılarımızın gizliliğine büyük önem veriyoruz.</p>
+            <p>Bu Gizlilik Politikası, Habit Chain uygulamamızın kullanıcılarının gizliliğini nasıl koruduğunu açıklamaktadır. Biz, kullanıcılarımızın gizliliğine büyük önem veriyoruz.</p>
 
             <h2>Toplanan Bilgiler</h2>
             <ul>
