--- a/habit_chain.html
+++ b/habit_chain.html
@@ -372,7 +372,7 @@
                 <p>"Invest in yourself." - Her gün kendinize yatırım yapın ve gelişiminizi gözlemleyin.</p>
             </div>
             <div class="feature-image">
-                <img src="IMAGE_1.png" alt="Habit Chain Ana Ekran" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%22300%22 height=%22600%22%3E%3Crect fill=%22%232a2a4a%22 width=%22300%22 height=%22600%22/%3E%3Ctext x=%2250%25%22 y=%2250%25%22 fill=%22%23a78bfa%22 font-size=%2220%22 text-anchor=%22middle%22%3EGörsel 1%3C/text%3E%3C/svg%3E'">
+                <img src="IMAGE_1.gif" alt="Habit Chain Ana Ekran" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%22300%22 height=%22600%22%3E%3Crect fill=%22%232a2a4a%22 width=%22300%22 height=%22600%22/%3E%3Ctext x=%2250%25%22 y=%2250%25%22 fill=%22%23a78bfa%22 font-size=%2220%22 text-anchor=%22middle%22%3EGörsel 1%3C/text%3E%3C/svg%3E'">
             </div>
         </section>
 
@@ -384,7 +384,7 @@
                 <p>Yüzlerce farklı ikon arasından seçim yapın ve her alışkanlığınıza özel bir görünüm kazandırın.</p>
             </div>
             <div class="feature-image">
-                <img src="IMAGE_2.png" alt="Alışkanlık Özelleştirme" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%22300%22 height=%22600%22%3E%3Crect fill=%22%232a2a4a%22 width=%22300%22 height=%22600%22/%3E%3Ctext x=%2250%25%22 y=%2250%25%22 fill=%22%23a78bfa%22 font-size=%2220%22 text-anchor=%22middle%22%3EGörsel 2%3C/text%3E%3C/svg%3E'">
+                <img src="IMAGE_2.gif" alt="Alışkanlık Özelleştirme" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%22300%22 height=%22600%22%3E%3Crect fill=%22%232a2a4a%22 width=%22300%22 height=%22600%22/%3E%3Ctext x=%2250%25%22 y=%2250%25%22 fill=%22%23a78bfa%22 font-size=%2220%22 text-anchor=%22middle%22%3EGörsel 2%3C/text%3E%3C/svg%3E'">
             </div>
         </section>
 
@@ -396,7 +396,7 @@
                 <p>Takvim görünümü ile her günün durumunu takip edin: Tamamlanan, atlanan veya kurtarılan günler.</p>
             </div>
             <div class="feature-image">
-                <img src="IMAGE_3.png" alt="Detaylı İstatistikler" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%22300%22 height=%22600%22%3E%3Crect fill=%22%232a2a4a%22 width=%22300%22 height=%22600%22/%3E%3Ctext x=%2250%25%22 y=%2250%25%22 fill=%22%23a78bfa%22 font-size=%2220%22 text-anchor=%22middle%22%3EGörsel 3%3C/text%3E%3C/svg%3E'">
+                <img src="IMAGE_3.gif" alt="Detaylı İstatistikler" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%22300%22 height=%22600%22%3E%3Crect fill=%22%232a2a4a%22 width=%22300%22 height=%22600%22/%3E%3Ctext x=%2250%25%22 y=%2250%25%22 fill=%22%23a78bfa%22 font-size=%2220%22 text-anchor=%22middle%22%3EGörsel 3%3C/text%3E%3C/svg%3E'">
             </div>
         </section>
 
@@ -408,7 +408,7 @@
                 <p>%100 başarı oranına ulaşın ve motivasyonunuzu her gün yüksek tutun.</p>
             </div>
             <div class="feature-image">
-                <img src="IMAGE_4.png" alt="Günlük Takvim" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%22300%22 height=%22600%22%3E%3Crect fill=%22%232a2a4a%22 width=%22300%22 height=%22600%22/%3E%3Ctext x=%2250%25%22 y=%2250%25%22 fill=%22%23a78bfa%22 font-size=%2220%22 text-anchor=%22middle%22%3EGörsel 4%3C/text%3E%3C/svg%3E'">
+                <img src="IMAGE_4.gif" alt="Günlük Takvim" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%22300%22 height=%22600%22%3E%3Crect fill=%22%232a2a4a%22 width=%22300%22 height=%22600%22/%3E%3Ctext x=%2250%25%22 y=%2250%25%22 fill=%22%23a78bfa%22 font-size=%2220%22 text-anchor=%22middle%22%3EGörsel 4%3C/text%3E%3C/svg%3E'">
             </div>
         </section>
 
@@ -420,7 +420,7 @@
                 <p>Yüzlerce farklı ikon ile alışkanlıklarınızı benzersiz hale getirin.</p>
             </div>
             <div class="feature-image">
-                <img src="IMAGE_5.png" alt="İkon Kütüphanesi" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%22300%22 height=%22600%22%3E%3Crect fill=%22%232a2a4a%22 width=%22300%22 height=%22600%22/%3E%3Ctext x=%2250%25%22 y=%2250%25%22 fill=%22%23a78bfa%22 font-size=%2220%22 text-anchor=%22middle%22%3EGörsel 5%3C/text%3E%3C/svg%3E'">
+                <img src="IMAGE_5.gif" alt="İkon Kütüphanesi" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%22300%22 height=%22600%22%3E%3Crect fill=%22%232a2a4a%22 width=%22300%22 height=%22600%22/%3E%3Ctext x=%2250%25%22 y=%2250%25%22 fill=%22%23a78bfa%22 font-size=%2220%22 text-anchor=%22middle%22%3EGörsel 5%3C/text%3E%3C/svg%3E'">
             </div>
         </section>
 
