--- a/habit_chain.html
+++ b/habit_chain.html
@@ -406,14 +406,14 @@
                 <h1>HABIT <span style="color: #a78bfa;">CHAIN</span></h1>
                 <p data-key="subtitle">Build Better Habits. Track Your Progress.</p>
                 <div class="download-buttons">
-                    <a href="#" class="store-button">
+                    <a href="#" class="store-button" target="_blank">
                         <div class="store-icon">📱</div>
                         <div class="store-text">
                             <small data-key="downloadon">Download on the</small>
                             <span data-key="appstore">App Store</span>
                         </div>
                     </a>
-                    <a href="#" class="store-button">
+                    <a href="https://play.google.com/store/apps/details?id=com.volkan_tastemir.habitchain" class="store-button" target="_blank">
                         <div class="store-icon">▶️</div>
                         <div class="store-text">
                             <small data-key="getiton">GET IT ON</small>
