--- a/habit_chain.html
+++ b/habit_chain.html
@@ -406,7 +406,7 @@
                 <h1>HABIT <span style="color: #a78bfa;">CHAIN</span></h1>
                 <p data-key="subtitle">Build Better Habits. Track Your Progress.</p>
                 <div class="download-buttons">
-                    <a href="#" class="store-button" target="_blank">
+                    <a href="https://apps.apple.com/us/app/habit-chain-daily-habits/id6758147804" class="store-button" target="_blank">
                         <div class="store-icon">📱</div>
                         <div class="store-text">
                             <small data-key="downloadon">Download on the</small>
